# ri-gilfanov

./: pyproject.toml
docs/: architecture.rst  conf.py  db_scheme.rst  index.rst  sqlalchemy.rst
docs/python/: index.rst
docs/python/sqlalchemy/: index.rst
docs/python/web-frameworks/: index.rst
