[tool.poetry]
name = "ri-gilfanov"
version = "0.1.0"
description = ""
authors = ["Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = ">=4.1.1"
sphinx_rtd_theme = ">=0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
